# backup-me

./: .gitignore  Dockerfile  LICENSE  README.md  config.json  pyproject.toml
.github/workflows/: docker-build.yml  publish-pypi.yml  tests.yml
backup_me/: backup.py  config.py  destinations.py  main.py  sources.py
backup_me/sources/: __init__.py  base.py  db.py  files.py  http.py
tests/: test_config.py  test_destinations.py  test_sources.py
