[tool.poetry]
name = "backup-me"
version = "0.1.2"
description = ""
authors = ["bastantoine <dev@bastien-antoine.fr>"]
packages = [{ include = "backup_me" }]
readme = "README.md"
repository = "https://github.com/bastantoine/backup-me"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.14"
typer = { extras = ["all"], version = "^0.9.0" }
pydantic = "^2.6.1"
requests = "^2.32.3"

[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"
pytest-subprocess = "^1.5.0"
pytest-mock = "^3.12.0"
moto = { extras = ["s3"], version = "^5.0.9" }
requests-mock = "^1.12.1"

[tool.poetry.scripts]
backup-me = 'backup_me.main:console'

[tool.coverage.run]
include = ["backup_me/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
